--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
   <title> {{title}} </title>
 {% block body %}
 <h1> Project Almanac </h1>
-<!--
+
 {% for line in content %}
-{{ line }} <br>
+{{ line }}: {{ content[line] }}<br>
 <hr>
 {% endfor %}
--->
+
 {% endblock %}
