--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,31 @@
 <h1> Project Almanac </h1>
 <hr>
 <div class="container-fluid col">
-<ul class="nav nav-pils nav-stacked col-4 border">
-    {% for article in dctnary["newsarticles"] %}
-        <li class="border">
-            <a href="{{ article[0] }}"> {{ article[1] }} </a>
-        </li>
-    {% endfor %}
-</ul>
+    <div class="row">
+
+        <!-- News column -->
+        <ul class="nav nav-pils flex-column col-4 align-items-end">
+            {% for article in dctnary["newsarticles"] %}
+                <li class="border">
+                    <a href="{{ article[0] }}"> {{ article[1] }} </a>
+                </li>
+            {% endfor %}
+        </ul>
+
+        <!-- Location -->
+        <div class="row">
+            <div class="col-8 align-items-start">
+                <img src="{{ dctnary["nasaimg"] }}" alt="An image of your current location">
+            </div>
+        </div>
+
+        <!-- Holidays -->
+        <div class="row">
+            <div class="col-8">
+
+            </div>
+        <div>
+    </div>
 </div>
 <hr>
 <a href="/horoscope"> Click here for horoscope </a> <br> <hr>
@@ -18,13 +36,21 @@
     {% if line in "nasaimg" %}
         <img src="{{ dctnary[line] }}" alt="An image of your current location">
     {% elif line in "holidays" %}
-        <p> Name: Date <br>
+        <hr>
+        <p>
+            <table>
+            <tr> <th style="text-align:right; padding-right: 10px" >Name </th> <th> Date </th></tr>
         {% for day in dctnary["holidays"] %}
-            {{ day["name"] }} : {{ day["date"][:10]}}
-            <br>
+            <tr>
+            <td style="text-align:right; padding-right: 10px"> {{ day["name"] }} </td>
+            <td> {{ day["date"][:10]}} </td>
+            </tr>
         {% endfor %}
+            </table>
+            <hr>
         </p>
     {% elif line in "newsarticles" %}
+        <hr>
         <p> Title: Content <br>
             {% for article in dctnary["newsarticles"] %}
                 <a href="{{ article[0] }}"> {{ article[1] }} </a>
