--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,45 @@
 
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
             <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
         <title> {{ title }}</title>
+
+        <style type="text/css">
+            #encapsule {
+                padding-top: 20px;
+            }
+
+            table {
+                border: none;
+            }
+
+            footer {
+                padding-left: 30px;
+                padding-bottom: 20px
+            }
+
+            #rightside {
+                text-align: left
+            }
+
+            #leftside {
+                text-align: right
+            }
+
+            #attribution {
+                color: #279640
+            }
+
+            button {
+                color: #000000;
+                background-color: transparent;
+                background-repeat: no-repeat;
+                border: none;
+                cursor: pointer;
+                overflow: hidden;
+                outline: none;
+                padding-bottom: 10px;
+            }
+        </style>
 
     </head>
 
