--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,108 @@
 {% extends "base.html" %}
   <title> {{title}} </title>
 {% block body %}
-<h1> Project Almanac </h1>
-<hr>
-<div class="container-fluid col">
-    <div class="row">
+<div class="container container-fluid" id="encapsule">
+    <h1> Project Almanac </h1>
+    <hr>
+    <div class="container-fluid">
 
-        <!-- News column -->
-        <ul class="nav nav-pils flex-column col-4 align-items-end">
-            {% for article in dctnary["newsarticles"] %}
-                <li class="border">
-                    <a href="{{ article[0] }}"> {{ article[1] }} </a>
-                </li>
-            {% endfor %}
-        </ul>
+        {% if "weatheralerts" in dctnary.keys() %}
+        <nav class="navbar" style="background-color: red">
+            <div class='navbar-brand'><a href='{{dctnary["weatheralerts"][0]["uri"]}}'>{{ dctnary["weatheralerts"][0]["title"] }}</a></div>
+        </nav>
+        {% endif %}
 
-        <!-- Location -->
         <div class="row">
-            <div class="col-8 align-items-start">
-                <img src="{{ dctnary["nasaimg"] }}" alt="An image of your current location">
+            <!-- News column -->
+            <ul class="nav nav-pils flex-column col-6 align-items-end" id="leftside">
+                <h2>News</h2>
+                {% for article in dctnary["newsarticles"] %}
+                    <li>
+                        <a href="{{ article[0] }}"> {{ article[1] }} </a>
+                    </li>
+                    <br>
+                {% endfor %}
+                <a href="https://newsapi.org/" id="attribution">Powered by News API</a>
+            </ul>
+
+            <div class="col-6 align-items-start" id="rightside">
+                <h2>Current Location</h2>
+                {{ dctnary["locationinfo"]["currcity"] }}, {{ dctnary["locationinfo"]["currreg"] }}, {{ dctnary["locationinfo"]["currcoun"] }}
+                <br>
+                Last updated: {{ dctnary["currtime"] }}
+                <br><br>
+                <img width="100%" src='{{ dctnary["nasaimg"] }}'>
             </div>
         </div>
 
-        <!-- Holidays -->
-        <div class="row">
-            <div class="col-8">
-
+        <div class="container-fluid row" style="padding-top: 20px">
+            <!-- Holidays -->
+            <div class="col-6" id="leftside">
+                <h2>Holidays</h2>
+                <table style="float: right">
+                    {% for h in dctnary["holidays"] %}
+                        <tr>
+                            <td style="padding-right: 20px">
+                                {{ h["name"] }}
+                            </td>
+                            <td style="text-align: left">
+                                {{ h["date"][:10] }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    <tr>
+                        <td>
+                        </td>
+                        <td>
+                            <br>
+                            <a href="https://www.calendarindex.com/" id="attribution">CalendarIndex</a>
+                        </td>
+                    </tr>
+                </table>
             </div>
-        <div>
+
+            <div class="container-fluid col-6" id="rightside">
+
+                <div class="row">
+                    <h2>Weather</h2>
+                    <ul>
+                        <li>Current -- {{ dctnary["currentweather"] }} {{ dctnary["currenttemp"] }}°F</li>
+                        <li>Weekly -- {{ dctnary["weekweather"] }}</li>
+                        <br>
+                        <li style="list-style-type: none;"><a href="https://darksky.net/poweredby/" id="attribution">Powered by Dark Sky</a></li>
+                    </ul>
+                </div>
+
+                <div class="row">
+                    <h2>Sunrise & Sunset Times</h2>
+                    <ul>
+                        <li>Sunrise Today: {{ dctnary["srisetoday"] }}</li>
+                        <li>Sunset Today: {{ dctnary["ssettoday"] }}</li>
+                        <li>Sunrise Tomorrow: {{ dctnary["srisetmw"] }}</li>
+                        <li>Sunset Tomorrow: {{ dctnary["ssettmw"] }}</li>
+                        <br>
+                        <li style="list-style-type: none;"><a href="https://sunrise-sunset.org/" id="attribution">Sunrise Sunset</a></li>
+                    </ul>
+                </div>
+
+                <div class="row">
+                    <h2 style="padding-right: 300px">Horoscope</h2>
+                    <br>
+                    <ul>
+                        <li style="list-style-type: none;"><a href="/sunsign">Select a sun sign</a></li>
+                    </ul>
+                </div>
+
+                <div class="row">
+                    <h2>Poems</h2>
+                    <ul>
+                        <li style="list-style-type: none;"><h4>{{ dctnary["poem"]["title"] }}</h5></li>
+                        <li style="list-style-type: none;"><h5>{{ dctnary["poem"]["poet"] }}</h5></li>
+                        <li style="list-style-type: none;">{{ dctnary["poem"]["poem"] }}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<hr>
-<a href="/horoscope"> Click here for horoscope </a> <br> <hr>
-{% for line in dctnary %}
-    {% if line in "nasaimg" %}
-        <img src="{{ dctnary[line] }}" alt="An image of your current location">
-    {% elif line in "holidays" %}
-        <hr>
-        <p>
-            <table>
-            <tr> <th style="text-align:right; padding-right: 10px" >Name </th> <th> Date </th></tr>
-        {% for day in dctnary["holidays"] %}
-            <tr>
-            <td style="text-align:right; padding-right: 10px"> {{ day["name"] }} </td>
-            <td> {{ day["date"][:10]}} </td>
-            </tr>
-        {% endfor %}
-            </table>
-            <hr>
-        </p>
-    {% elif line in "newsarticles" %}
-        <hr>
-        <p> Title: Content <br>
-            {% for article in dctnary["newsarticles"] %}
-                <a href="{{ article[0] }}"> {{ article[1] }} </a>
-                <br> <br>
-            {% endfor %}
-    {% else %}
-        {{ line }}: {{ dctnary[line] }}
-        <br>
-
-
-    {% endif %}
-    <hr>
-{% endfor %}
-
-
 {% endblock %}
