added header bar on every page

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,10 @@
 
 
     <body>
+        <div class="container container-fluid" id="encapsule">
+          <h1> <a href="/" style="text-decoration: none; color: #000000">Project Almanac</a> </h1>
+          <hr>
+        </div>
         {% block body %} {% endblock %}
         <footer><br>Copyright &copy; 2018 azrael</footer>
     </body>
