--- a/templates/horoscope.html
+++ b/templates/horoscope.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="container container-fluid" id="encapsule">
+<div class="container container-fluid">
 	<h1>{{ sign }}</h1>
 
 	<h3>Your daily horoscope</h3>
