--- a/templates/sunsign.html
+++ b/templates/sunsign.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="container container-fluid" id="encapsule">
+<div class="container container-fluid">
 	<form name="sunsign" action="/horoscope">
         <button name="sunsign" type="submit" class="btn" value="aries"><img src="https://images.ganeshaspeaks.com/images_gsv7/aries200.png"><br><h3>Aries</h3></button>
         <button name="sunsign" type="submit" class="btn" value="taurus"><img src="https://images.ganeshaspeaks.com/images_gsv7/taurus200.png"><br><h3>Taurus</h3></button>
