--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 
             <div class="col-6 align-items-start" style="padding-left: 30px" d="rightside">
 
-                <div class="row">
+                <div class="row" style="background-color: #F0B67F">
                     <h2>Weather</h2>
                     <ul>
                         <li>Current -- {{ dctnary["currentweather"] }} {{ dctnary["currenttemp"] }}°F</li>
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
 
-                <div class="row">
+                <div class="row" style="background-color: #F0B67F">
                     <h2>Sunrise & Sunset Times</h2>
                     <ul>
                         <li>Sunrise Today: {{ dctnary["srisetoday"] }}</li>
