--- a/templates/index.html
+++ b/templates/index.html
@@ -106,9 +106,11 @@
                     </ul>
                 </div>
 
-                <div class="row">
-                    <h2>Poems</h2> 
+                <div class="row" style="background-color: #001242">
+                    <h2 style="color:#000000">Poems</h2>
                     <a name = "poems">
+                    <!-- API needs work/replacement
+                            website is unreliable. -->
                     <ul>
                         <li style="list-style-type: none;"><h4>{{ dctnary["poem"]["title"] }}</h5></li>
                         <li style="list-style-type: none;"><h5>{{ dctnary["poem"]["poet"] }}</h5></li>
