--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,7 @@
           <hr>
         </div>
         {% block body %} {% endblock %}
-        <footer><br>Copyright &copy; 2018 azrael</footer>
+        <footer><br>Copyright &copy; 2018 azrael<br>
+        Vincent Chi, Bill Ni, Jason Tung, Wei Wen Zhou</footer>
     </body>
 </html>
